diesel_compile_tests/tests/fail/eq_any_is_nullable.stderr
error[E0277]: cannot deserialize a value of the database type `diesel::sql_types::Nullable<diesel::sql_types::Bool>` as `bool`
    --> tests/fail/eq_any_is_nullable.rs:18:15
     |
  LL |         .load(&mut conn)
     |          ---- ^^^^^^^^^ unsatisfied trait bound
     |          |
     |          required by a bound introduced by this call
     |
     = help: the trait `FromSql<diesel::sql_types::Nullable<diesel::sql_types::Bool>, Pg>` is not implemented for `bool`
     = note: double check your type mappings via the documentation of `diesel::sql_types::Nullable<diesel::sql_types::Bool>`
help: the following other types implement trait `FromSql<A, DB>`
    --> DIESEL/diesel/diesel/src/sqlite/types/mod.rs
     |
  LL | impl FromSql<sql_types::Bool, Sqlite> for bool {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `bool` implements `FromSql<diesel::sql_types::Bool, Sqlite>`
     |
    ::: DIESEL/diesel/diesel/src/pg/types/primitives.rs
     |
   LL | impl FromSql<sql_types::Bool, Pg> for bool {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `bool` implements `FromSql<diesel::sql_types::Bool, Pg>`
     |
    ::: DIESEL/diesel/diesel/src/mysql/types/mod.rs
     |
 LL | impl FromSql<Bool, Mysql> for bool {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `bool` implements `FromSql<diesel::sql_types::Bool, Mysql>`
     = note: required for `bool` to implement `Queryable<Nullable<Bool>, Pg>`
     = note: required for `bool` to implement `FromSqlRow<Nullable<Bool>, Pg>`
     = note: required for `diesel::sql_types::Nullable<diesel::sql_types::Bool>` to implement `diesel::query_dsl::load_dsl::private::CompatibleType<bool, Pg>`
     = note: required for `SelectStatement<FromClause<table>, ...>` to implement `LoadQuery<'_, diesel::PgConnection, bool>`
note: required by a bound in `load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  
     For more information about this error, try `rustc --explain E0277`.
